--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -2,7 +2,7 @@
   background-color: #f5f5f5;
   .largest-section{
     background-color: #ffffff;
-    border-radius: 8px;
+    border-radius: 5px;
     padding: 0;
     padding: 32px;
     margin: 32px 0;
@@ -32,7 +32,7 @@
     }
     .calculator{
       background-color: #ffffff;
-      border-radius: 8px;
+      border-radius: 5px;
       margin-bottom: 32px;
       // margin: 32px 0;
       .show-data{
@@ -131,7 +131,7 @@
   background-color: #ffffff;
   padding: 32px;
   margin-bottom: 32px;
-  border-radius: 8px;
+  border-radius: 5px;
   .cb-title{
     margin-bottom: 32px;
   }
@@ -180,7 +180,7 @@
 }
 .route-info{
   padding: 32px;
-  border-radius: 8px;
+  border-radius: 5px;
   background-color: #ffffff;
   .content{
     margin-bottom: 32px;
@@ -200,9 +200,9 @@
 
 }
 .check-out-details{
-  border-radius: 8px;
+  border-radius: 5px;
   background-color: #ffffff;
-  padding: 32px;
+  padding: 25px 20px 30px;
   .cb-title{
     margin-bottom: 16px;
   }
@@ -212,16 +212,18 @@
   }
   .lft-img {
     width: 100%;
-    max-width: auto;
+    max-width: 140px;
+    min-width: 140px;
     height: auto;
   }
   .lft-txt {
-    margin-left: 16px;
+    margin-left: 20px;
     p {
-      font-size: 14px;
+      color: $black;
+      font-size: 12px;
       line-height: 20px;
-      font-weight: 600;
-      margin-bottom: 14px;
+      font-weight: normal;
+      margin-bottom: 15px;
     }
     .arrow {
       color: #f7992c;
