--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -370,19 +370,20 @@
   }
 }
 .visit-place-section{
-  margin-bottom: 36px;
+  // margin-bottom: 36px;
+  padding-bottom: 60px;
   .visit-flex{
     justify-content: space-between;
   }
   .left-side{
     width: 66%;
     background-color: #ffffff;
+    border-radius: 5px;
 
   }
   .bplace{
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
-
+    border-radius: 5px;
   }
   .visit-out{
     width: 50%;
@@ -395,7 +396,7 @@
     width: 33%;
     .check-out{
       box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-      border-radius: 8px;
+      border-radius: 5px;
     }
   }
   .visit-ind{
@@ -403,6 +404,12 @@
     }
  .lft-txt{
     margin-left: 16px;
+    .blg-date{
+      font-size: 12px;
+      color: $black;
+      line-height: 1;
+      margin-bottom: 10px;
+    }
   }
   // .visit-ind .cas-in .lft-txt{
   //   margin-left: 5px;
@@ -412,7 +419,7 @@
     background-color: rgb(255, 255, 255);
     
     margin-bottom: 20px;
-    border-radius: 8px;
+    border-radius: 5px;
   }
   .cas-in{
     display: flex;
@@ -421,18 +428,28 @@
   }
   .lft-img{
     width: 100%;
-    max-width: auto;
+    min-width: 140px;
+    max-width: 140px;
     height: auto;
   }
   .lft-txt p{
-    font-size: 14px;
-    line-height: 20px;
+    // font-size: 14px;
+    // line-height: 20px;
+    font-size: 16px;
+    line-height: 22px;
     font-weight: 600;
     margin-bottom: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .arrow{
     color: #f7992c;
     font-size: 14px;
+    display: inline-block;
+    vertical-align: top;
   }
   .arrow:hover{
     color: #f7992c;
@@ -446,6 +463,7 @@
   .arrow img{
     margin: 0;
     display: inline-block;
+    vertical-align: middle;
     margin-left: 8px;
     width: auto;
   }
@@ -486,6 +504,7 @@
   width: 100%;
   height:40px;
   border-radius: 5px;
+  border: 1px solid $black;
   background-color: rgba(247, 153, 44, 0);
   margin-bottom: 20px;
   font-size: 12px;
