--- a/src/css/scss/pages/_individual.scss
+++ b/src/css/scss/pages/_individual.scss
@@ -5,25 +5,29 @@
 
 .grid-container {
     margin: 70px 0 30px;
-    h2 {    
+
+    h2 {
         font-family: "SF Pro Display";
         font-size: 20px;
         line-height: 1.5;
         font-weight: bold;
         @extend .txt-left;
     }
+
     p {
         color: $lightgray;
         font-family: "SF Pro Display";
         font-size: 14px;
         line-height: 20px;
-        @extend .txt-left; 
+        @extend .txt-left;
     }
+
     .flex-containt {
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
         justify-content: space-between;
+
         .white-card {
             background: $white;
             border-radius: 5px;
@@ -54,15 +58,18 @@
             img {
                 margin-bottom: 45px;
             }
-            .blog-date{
+
+            .blog-date {
                 line-height: 15px;
                 margin-bottom: 30px;
+
                 img {
                     display: inline-block;
                     vertical-align: middle;
                     margin: 0 12px 0 0;
                 }
-                span{
+
+                span {
                     color: $black;
                     font-family: "SF Pro Display";
                     font-size: 12px;
@@ -77,9 +84,9 @@
         }
 
         .faq {
-            
+
             h2 {
-                color: $gray;                
+                color: $gray;
                 font-size: 30px;
                 line-height: 1;
                 margin: 0 0 20px;
@@ -104,10 +111,10 @@
                     -webkit-box-shadow: 0px 0px 15.66px 2.34px rgba(0, 17, 45, 0.09);
                     box-shadow: 0px 0px 15.66px 2.34px rgba(0, 17, 45, 0.09);
 
-                    h2{
+                    h2 {
                         margin: 0;
                     }
-                    
+
                     button {
                         padding: 20px 50px 20px 35px;
 
@@ -140,38 +147,41 @@
                                 border: 1px solid #e7e7e7;
                                 border-radius: 100%;
                             }
-                            &:focus{
+
+                            &:focus {
                                 color: #000;
                             }
 
                         }
                     }
-                    .ac-panel{       
-                        
-                        .ac-text{
+
+                    .ac-panel {
+
+                        .ac-text {
                             padding: 10px 50px 40px 35px;
-                            p{
+
+                            p {
                                 margin-bottom: 0;
                             }
                         }
                     }
-                    &.is-active{
-                        button{
-                            &.ac-trigger{
+
+                    &.is-active {
+                        button {
+                            &.ac-trigger {
                                 &::before {
                                     transform: rotate(180deg);
                                     margin-top: -3px;
-                                  }
-                            }
-                        }
-                        .ac-panel{
-                            .ac-text{
-                                
+                                }
                             }
                         }
 
+                        .ac-panel {
+                            .ac-text {}
+                        }
+
                     }
-                    
+
                 }
             }
 
@@ -182,23 +192,29 @@
     }
 }
 
-.abt-club{    
-    .sm-box{
+.abt-club {
+    .sm-box {
         padding: 25px 20px 30px;
         border-radius: 5px;
         background-color: rgb(255, 255, 255);
         box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
         margin-bottom: 25px;
-        .cb-title{
-            margin-bottom: 30px;
+
+        .cb-title {
+            margin-bottom: 20px;
         }
-        .text-p{
+
+        .text-p {
             color: $color-555;
             font-size: 14px;
             font-weight: 400;
             line-height: 23px;
-            strong{
+
+            strong {
                 color: $black;
+            }
+            br, .read-link{
+                display: none;
             }
         }
     }
@@ -206,7 +222,7 @@
 }
 
 
-.check-out-blogs{
+.check-out-blogs {
     margin-top: 25px;
     padding: 25px 20px 30px;
     border-radius: 5px;
@@ -214,20 +230,23 @@
     -webkit-box-shadow: 0px 0px 17.8px 2.2px rgba(0, 0, 0, 0.05);
     box-shadow: 0px 0px 17.8px 2.2px rgba(0, 0, 0, 0.05);
     margin-bottom: 20px;
-    .cb-title{
+
+    .cb-title {
         margin-bottom: 25px;
     }
 
-    .sub-h-1{
+    .sub-h-1 {
         font-size: 20px;
         color: #000000;
         margin: 0 auto;
         margin-bottom: 20px;
     }
-    .swt{
+
+    .swt {
         display: flex;
         justify-content: space-between;
-        select{
+
+        select {
             width: 100%;
             height: 40px;
             border-radius: 5px;
@@ -237,43 +256,54 @@
             padding: 8px 16px;
             border: 1px solid $color-c9;
         }
+
         .set-box-s {
-            select{
-                width: 160px;
-                max-width: 100%;  
+            width: 48%;
+
+            select {
+                width: 100%;
+                max-width: 100%;
             }
         }
+
         .set-box-v {
-            select{
-                width: 160px;
+            width: 48%;
+
+            select {
+                width: 100%;
                 max-width: 100%;
             }
         }
     }
-    .cas-rb{
-        .rb-lg{
+
+    .cas-rb {
+        .rb-lg {
             margin-bottom: 16px;
             position: relative;
             left: 0;
             top: 0;
-            &:last-child{
+
+            &:last-child {
                 margin-bottom: 0;
             }
+
             .rb-stck {
-                img{
+                img {
                     width: 100%;
                     height: auto;
-                    }
+                }
             }
-            .rb-lg-txt{
+
+            .rb-lg-txt {
                 position: absolute;
                 bottom: 0;
                 background-color: rgb(0, 0, 0, 0.38);
-                color: #ffffff;                
+                color: #ffffff;
                 align-items: center;
                 width: 100%;
                 border-radius: 0 0 10px 10px;
-                p{
+
+                p {
                     font-size: 16px;
                     color: #ffffff;
                     overflow: hidden;
@@ -284,14 +314,136 @@
                     text-overflow: ellipsis;
                 }
             }
-            
+
         }
     }
 }
 
 
+@media (max-width: 991.98px) {
+    .grid-container {
+        .flex-containt {
+            justify-content: center;
+            flex-direction: column;
+
+            .lt-side,
+            .rt-side {
+                width: 100%;
+            }
+
+            .white-card {
+                padding: 25px 20px;
+            }
+
+            .faq {
+                padding: 30px 20px 35px;
+                margin-bottom: 30px;
+
+                h2 {
+                    font-size: 20px;
+                }
+
+                .faq-accordian {
+                    .faq-card {
+                        button {
+                            padding: 15px 45px 15px 20px;
+
+                            &.ac-trigger {
+                                font-size: 14px;
+
+                                &::before {
+                                    right: 21px;
+                                    margin-top: 1px;
+                                }
+
+                                &::after {
+                                    width: 22px;
+                                    height: 22px;
+                                    right: 17px;
+                                    margin-top: 0px;
+                                }
+
+                            }
+                        }
+
+                        .ac-panel {
+
+                            .ac-text {
+                                padding: 0px 20px 25px 20px;
+
+                                p {
+                                    margin-bottom: 0;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .abt-club {
+                order: 1;
+
+                .sm-box {
+                    padding: 30px 20px 35px;
+
+                    .cb-title {
+                        text-align: center;
+                    }
+
+                    p {
+                        text-align: center;
+                    }
+
+                    br{ display: inline-block;}
+                    .read-link {
+                        color: #f7992c;
+                        font-size: 16px;
+                        line-height: 1;
+                        display: inline-block;
+                        vertical-align: middle;
+                        margin-top: 20px;
+
+                        img {
+                            display: inline-block;
+                            vertical-align: middle;
+                        }
+                    }
+                }
 
 
+            }
+
+            .check-out-details {
+                padding: 30px 20px 35px;
+            }
+
+            .check-out-blogs {
+                padding: 30px 20px 35px;
+            }
 
 
+            .blog-content {
+                margin-bottom: 30px;
 
+                h2 {
+                    margin: 0 0 10px;
+                }
+
+                p {
+                    margin-bottom: 35px;
+                }
+
+                img {
+                    margin-bottom: 25px;
+                }
+
+                .blog-date {
+                    margin-bottom: 20px;
+                }
+            }
+
+        }
+
+    }
+
+}
